# boggler

./: .pre-commit-config.yaml  README.md  board_randimizer.py  boggler.py  boggler_utils.py  dice_4x4.csv  dice_4x4.txt  dice_6x6.csv  pyproject.toml  split_wordlist_alpha.sh
boards/: b1.txt  b2.txt  b3.txt  b4.txt  b5.txt  b6.txt
boggler/: __main__.py  board.py  board_randomizer.py  boggler_utils.py
boggler/c/: board.h
src/boggler/: boggler.py  boggler_utils.py
src/boggler/c/: Makefile  board.h  boggler.c  tree.h
tests/: boggler  functional_tests.py  test_read_boards.py  test_solve_4x4_board.py
tests/boards/: 4x4_between_whitespace.board  4x4_blank_lines.board  4x4_clean.board  4x4_inconsistent_width.board  4x4_leading_whitespace.board  4x4_trailing_whitespace.board  4x4_wrong_size.board
